--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@
 *{
     margin: 0;
     padding: 0;
-    width:100;
-    overflow-x: hidden;
     font-family: 'Nunito', sans-serif;
+    box-sizing: border-box;
 }
 
 .header-wrapper{
@@ -120,7 +119,7 @@ a:hover{
 }
 
 .menu-items{
-    position:fixed;
+    position:absolute;
     top: 0;
     left: 0;
     width: 100%;
