--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     padding: 0;
     font-family: 'Nunito', sans-serif;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .header-wrapper{
